--- a/css/style.css
+++ b/css/style.css
@@ -170,3 +170,47 @@ ul {
   }
 }
 /* End Stuff  */
+
+/* Start Team  */
+.team {
+  background-color: var(--section-color);
+}
+.team h1 {
+  color: var(--yellow-color);
+}
+.team h3 {
+  background-color: var(--green-color);
+}
+/* End Team  */
+
+/* Start Projects  */
+.projects {
+  background-color: var(--dark-color);
+}
+/* End Projects  */
+
+/* Start Subscribe  */
+.subscribe {
+  background-color: var(--yellow-color);
+}
+.subscribe input[type="text"] {
+  border: none;
+  border-bottom: 1px solid white;
+}
+.subscribe input[type="text"]::placeholder {
+  color: white;
+}
+.subscribe input[type="submit"] {
+  background-color: var(--dark-color);
+  color: var(--yellow-color);
+  transition: 0.3s;
+}
+.subscribe input[type="submit"]:hover {
+  background-color: var(--dark-color);
+  transform: scale(1.1);
+  color: var(--yellow-color);
+}
+:focus {
+  outline: none;
+}
+/* End Subscribe  */
